--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,14 @@ body {
   background: #0a0a0a;
   font-family: Arial, Helvetica, sans-serif;
 }
+.clip-bottom-curve {
+  mask-image: linear-gradient(
+    rgb(255, 255, 255) 76.85%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
+  -webkit-mask-image: radial-gradient(
+    103% 12% at 50% 102%,
+    transparent 50%,
+    white 51%
+  );
+}
